--- a/about.html
+++ b/about.html
@@ -186,14 +186,14 @@
                     <br>
                     <br>
                     <div class="body">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, nemo eius? Omnis distinctio ratione sunt asperiores quasi inventore non ipsa ipsam reiciendis, iusto quidem laboriosam numquam ab odit repellendus, velit voluptatum. Possimus quis totam amet facilis ipsum repudiandae, eligendi eaque.</p>
+                        <p>I’ve always sought out opportunities and challenges that are meaningful to me. Although my professional path has taken many twists and turns — from touring and recording artist, to employee of the year at a non-profit, to dean's scholar at UPenn, to small business owner and entrepreneur — I've never stopped engaging my passion to help others and solve problems.</p>
                         <br>
                         <br>
                         <div class="quote">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste temporibus itaque mollitia, voluptatibus eos excepturi!
+                            Mission-driven full stack developer with a passion for thoughtful UI design, collaboration, and teaching.
                         </div>
                         <br>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto, deleniti ex perspiciatis sunt recusandae, nobis ut animi possimus minima corrupti architecto odio cupiditate necessitatibus accusantium est officiis quod magnam blanditiis. Aperiam quo doloribus exercitationem quidem molestias, ab praesentium vel recusandae dolor odio repudiandae soluta expedita!</p>
+                        <p>As a web developer, I enjoy using my obsessive attention to detail, my unequivocal love for making things, and my mission-driven work ethic to literally change the world. That's why I’m excited to make a big impact at a high growth company.</p>
                     </div>
                 </div>
             </div>
