--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/style.css" />
 
     <!-- about css -->
-    <link rel="stylesheet" href="css/about.css">
+    <link rel="stylesheet" href="css/about.css" />
 
     <!-- bootstrap css -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
@@ -73,13 +73,15 @@
           <a href="#" class="active-status"></a>
           <div class="username">John Doe</div>
           <br />
-          <span class="user-skills text-center">Software Developer | Graphic Designer | Youtuber |</span>
+          <span class="user-skills text-center"
+            >Software Developer | Graphic Designer | Youtuber |</span
+          >
           <br />
           <div class="cv-cont">
-              <a href="#cv"
-                >Download cv
-                <ion-icon class="ml-1" name="cloud-download-outline"></ion-icon
-              ></a>
+            <a href="#cv"
+              >Download cv
+              <ion-icon class="ml-1" name="cloud-download-outline"></ion-icon
+            ></a>
           </div>
         </div>
 
@@ -174,47 +176,90 @@
           <!-- about main -->
           <div class="about-main mt-5">
             <h2 class="ml-0" style="font-weight: 600">About Me</h2>
-            
+
             <div class="about-content mt-4">
-                <div class="img">
-                    <img src="./img/header/myimg.png" alt="" class="img-fluid">
+              <div class="img">
+                <img src="./img/header/myimg.png" alt="" class="img-fluid" />
+              </div>
+              <div class="main-info">
+                <div class="head">
+                  <h1>Introducing Myself</h1>
                 </div>
-                <div class="main-info">
-                    <div class="head">
-                        <h1>Introducing Myself</h1>
-                    </div>
-                    <br>
-                    <br>
-                    <div class="body">
-                        <p>I’ve always sought out opportunities and challenges that are meaningful to me. Although my professional path has taken many twists and turns — from touring and recording artist, to employee of the year at a non-profit, to dean's scholar at UPenn, to small business owner and entrepreneur — I've never stopped engaging my passion to help others and solve problems.</p>
-                        <br>
-                        <br>
-                        <div class="quote">
-                            Mission-driven full stack developer with a passion for thoughtful UI design, collaboration, and teaching.
-                        </div>
-                        <br>
-                        <p>As a web developer, I enjoy using my obsessive attention to detail, my unequivocal love for making things, and my mission-driven work ethic to literally change the world. That's why I’m excited to make a big impact at a high growth company.</p>
-                    </div>
+                <br />
+                <div class="body">
+                  <p>
+                    I am a selftaught software developer who has developed
+                    products for enterprise clients such as Faan (Federal
+                    airport authority of nigeria)as well as many venture-backed
+                    businesses. I specialize in building applications specific
+                    to the business needs of my clients. I have done work in
+                    software development, web apps creation, front-end/back-end
+                    web, database/server management, graphic design, and content
+                    creation. I also enjoy helping others out there who are
+                    striving hard in becomming a developer by creating youtube
+                    videos based on software development and graphic designs.
+                  </p>
+                  <br />
+                  <div class="quote">
+                    Mission-driven full stack developer with a passion for
+                    thoughtful UI design, collaboration, and teaching.
+                  </div>
+                  <br />
+                  <p>
+                    As a web developer, I enjoy using my obsessive attention to
+                    detail, my unequivocal love for making things, and my
+                    mission-driven work ethic to literally change the world.
+                    That's why I’m excited to make a big impact at a high growth
+                    company.
+                  </p>
+                  <br />
+                  <p>
+                    I have maintained, developed and launched multiple projects
+                    from scratch, carrying the development of its' back-end and
+                    front-end codebases.
+                  </p>
+                  <p>
+                    My current toolset includes Java Language & Swingboot
+                    Framework, PHP & MYSQL, React, React Native, TypeScript,
+                    Andriod Development, Nodejs, Express.js, Mongodb
+                  </p>
+                  <p>
+                    I can help you with all the sides of your project:verifying
+                    good UI/UX design, leading/co-developing the back-end and
+                    front-end, mentoring the team, estimating tasks, researching
+                    possible techs, leading, launching and monitoring the
+                    project.
+                  </p>
                 </div>
+              </div>
             </div>
-            <br>
-            <br>
-            <div class="showcase"> 
-                <div class="cont">
-                    <div class="txt ml-3">
-                        <h6>Have a Project on Your Mind?</h6>
-                        <p>Like what i do. why not discuss your project with me and see it come into reality.</p>
-                        <a href="index.html#contact" class="contact-btn">Contact Me</a>
-                    </div>
-                    <div class="img">
-                        <img src="./img/illustration/1.png" alt="" class="img-fluid">
-                    </div>
+            <br />
+            <br />
+            <div class="showcase">
+              <div class="cont">
+                <div class="txt ml-3">
+                  <h6>Have a Project on Your Mind?</h6>
+                  <p>
+                    Like what i do. why not discuss your project with me and see
+                    it come into reality.
+                  </p>
+                  <a href="index.html#contact" class="contact-btn"
+                    >Contact Me</a
+                  >
                 </div>
+                <div class="img">
+                  <img
+                    src="./img/illustration/1.png"
+                    alt=""
+                    class="img-fluid"
+                  />
+                </div>
+              </div>
             </div>
           </div>
-          <br>
-          <br>
-          <br>
+          <br />
+          <br />
+          <br />
           <footer class="footer ml-3">
             <div class="clear-fix">
               <div class="float-left">
