--- a/Index.html
+++ b/Index.html
@@ -417,15 +417,15 @@
             <div class="form-cont">
               <form action="#" class="ml-3 input-groups">
                 <div class="input-groups">
-                  <div class="left-icon">👨‍🦱</div>
+                  <div class="left-icon"><ion-icon name="person-add-outline"></ion-icon></div>
                   <input type="text" placeholder="Name" class="inputs">
                 </div>
                 <div class="input-groups">
-                  <div class="left-icon">💌</div>
+                  <div class="left-icon"><ion-icon name="mail-open-outline"></ion-icon></div>
                   <input type="email" placeholder="Name" class="inputs">
                 </div>
                 <div class="input-groups">
-                  <div class="left-icon">💌</div>
+                  <div class="left-icon"><ion-icon name="send-outline"></ion-icon></div>
                   <textarea name="" placeholder="Message" id=""  class="inputs"></textarea>
                 </div>
                 <input type="submit" value="Send Message" class="submit-btn ml-3">
