--- a/Index.html
+++ b/Index.html
@@ -459,12 +459,12 @@
         <!-- navigation links -->
         <div class="navigation-links">
           <li>
-            <a href=""
+            <a href="Index.html"
               ><ion-icon name="home-outline" class="navbar-icons"></ion-icon
             ></a>
           </li>
           <li>
-            <a href=""
+            <a href="about.html"
               ><ion-icon
                 name="person-add-outline"
                 class="navbar-icons"
@@ -472,7 +472,7 @@
             ></a>
           </li>
           <li>
-            <a href=""
+            <a href="portfolio.html"
               ><ion-icon
                 name="briefcase-outline"
                 class="navbar-icons"
@@ -480,7 +480,7 @@
             ></a>
           </li>
           <li>
-            <a href=""
+            <a href="index.html#contact"
               ><ion-icon name="call-outline" class="navbar-icons"></ion-icon
             ></a>
           </li>
