--- a/about.html
+++ b/about.html
@@ -171,12 +171,20 @@
 
       <!-- main column -->
       <main class="main-column">
+        <!-- header -->
+        <header class="header">
+          <div class="overlay">
+            <div class="content">
+              <h2 class="ml-0" style="font-weight: 600">About Me</h2>
+              <br>
+              <p><small>Get to know more about me.</small></p>
+            </div>
+          </div>
+        </header>
         <!-- main area about -->
         <section class="about-area mt-1 mb-2 p-4">
           <!-- about main -->
           <div class="about-main mt-5">
-            <h2 class="ml-0" style="font-weight: 600">About Me</h2>
-
             <div class="about-content mt-4">
               <div class="img">
                 <img src="./img/header/myimg.png" alt="" class="img-fluid" />
