--- a/Index.html
+++ b/Index.html
@@ -488,6 +488,7 @@
       </nav>
     </div>
 
+    <script src="js/main.js" defer></script>
     <script>
       let navmenuicon = document.querySelectorAll(".navbar-menu-icon");
 
