--- a/Index.html
+++ b/Index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="title" content="Benrobo-Port">
+    <meta name="description" content="Welcome to my portfolio, feel free to contact me for more services.">
+    <meta name="keywords" content="html, css, javascript, php, java, react.js, nodejs, express.js">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
+    <meta name="author" content="benrobo">
     <title>Benrobo Port</title>
 
     <!-- custom css file -->
