--- a/about.html
+++ b/about.html
@@ -285,12 +285,12 @@
         <!-- navigation links -->
         <div class="navigation-links">
           <li>
-            <a href=""
+            <a href="index.html"
               ><ion-icon name="home-outline" class="navbar-icons"></ion-icon
             ></a>
           </li>
           <li>
-            <a href=""
+            <a href="about.html"
               ><ion-icon
                 name="person-add-outline"
                 class="navbar-icons"
@@ -298,7 +298,7 @@
             ></a>
           </li>
           <li>
-            <a href=""
+            <a href="portfolio.html"
               ><ion-icon
                 name="briefcase-outline"
                 class="navbar-icons"
@@ -306,7 +306,7 @@
             ></a>
           </li>
           <li>
-            <a href=""
+            <a href="index.html#contact"
               ><ion-icon name="call-outline" class="navbar-icons"></ion-icon
             ></a>
           </li>
