--- a/about.html
+++ b/about.html
@@ -1,18 +1,15 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="title" content="Benrobo-Port">
-    <meta name="description" content="Welcome to my portfolio, feel free to contact me for more services.">
-    <meta name="keywords" content="html, css, javascript, php, java, react.js, nodejs, express.js">
+    <meta name="description" content="This is my portfolio about page.">
+    <meta name="description" content="created by: benrobo">
     <meta name="robots" content="index, follow">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta name="language" content="English">
-    <meta name="author" content="benrobo">
     <title>Benrobo | About</title>
-
+    <link rel="icon" href="img/profile/avatar.jpeg">
     <!-- custom css file -->
     <link rel="stylesheet" href="css/style.css" />
 
@@ -178,20 +175,12 @@
 
       <!-- main column -->
       <main class="main-column">
-        <!-- header -->
-        <header class="header">
-          <div class="overlay">
-            <div class="content">
-              <h2 class="ml-0" style="font-weight: 600">About Me</h2>
-              <br>
-              <p><small>Get to know more about me.</small></p>
-            </div>
-          </div>
-        </header>
         <!-- main area about -->
         <section class="about-area mt-1 mb-2 p-4">
           <!-- about main -->
           <div class="about-main mt-5">
+            <h2 class="ml-0" style="font-weight: 600">About Me</h2>
+
             <div class="about-content mt-4">
               <div class="img">
                 <img src="./img/header/myimg.png" alt="" class="img-fluid" />
@@ -300,11 +289,7 @@
         <!-- navigation links -->
         <div class="navigation-links">
           <li>
-<<<<<<< HEAD
             <a href="index.html"
-=======
-            <a href="Index.html"
->>>>>>> a511276f27c968d98408680f44b2cc47ae7e8af5
               ><ion-icon name="home-outline" class="navbar-icons"></ion-icon
             ></a>
           </li>
