--- a/portfolio.html
+++ b/portfolio.html
@@ -1,18 +1,15 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="title" content="Benrobo-Port">
-    <meta name="description" content="Welcome to my portfolio, feel free to contact me for more services.">
-    <meta name="keywords" content="html, css, javascript, php, java, react.js, nodejs, express.js">
+    <meta name="description" content="This is my portfolio homepage.">
+    <meta name="description" content="created by: benrobo">
     <meta name="robots" content="index, follow">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta name="language" content="English">
-    <meta name="author" content="benrobo">
     <title>Benrobo | Portfolio</title>
-
+    <link rel="icon" href="img/profile/avatar.jpeg">
     <!-- custom css file -->
     <link rel="stylesheet" href="css/style.css" />
 
@@ -255,7 +252,7 @@
         <!-- navigation links -->
         <div class="navigation-links">
           <li>
-            <a href="Index.html"
+            <a href="index.html"
               ><ion-icon name="home-outline" class="navbar-icons"></ion-icon
             ></a>
           </li>
