--- a/Index.html
+++ b/Index.html
@@ -492,6 +492,7 @@
       </nav>
     </div>
 
+    <script src="js/main.js" defer></script>
     <script>
       let navmenuicon = document.querySelectorAll(".navbar-menu-icon");
 
