--- a/Index.html
+++ b/Index.html
@@ -231,24 +231,18 @@
               <div class="services-box-cont">
                 <div class="box">
                   <div class="head">
-                    <div class="icon"></div>
+                    <div class="icon"><ion-icon name="code-working-outline"></ion-icon></div>
                     <p>Web Development</p>
                   </div>
                   <div class="body">
                     <p>
-                      Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                      Harum, fugiat! Lorem ipsum dolor sit amet consectetur
-                      adipisicing elit. Natus, nemo autem vitae eos earum
-                      dolorum.
+                      Deploying web application with crossplatform compatibility. responsive designs and user friendly UI\UX.our web services mainly focus on easy to-use interface, speed and security
                     </p>
-                  </div>
-                  <div class="footer">
-                    <a href="">ORDER NOW ></a>
                   </div>
                 </div>
                 <div class="box">
                   <div class="head">
-                    <div class="icon"></div>
+                    <div class="icon"><ion-icon name="color-palette-outline"></ion-icon></div>
                     <p>Graphics Design</p>
                   </div>
                   <div class="body">
@@ -259,76 +253,49 @@
                       dolorum.
                     </p>
                   </div>
-                  <div class="footer">
-                    <a href="">ORDER NOW ></a>
-                  </div>
                 </div>
                 <div class="box">
                   <div class="head">
-                    <div class="icon"></div>
+                    <div class="icon"><ion-icon name="git-compare-outline"></ion-icon></div>
                     <p>Fullstack Development</p>
                   </div>
                   <div class="body">
                     <p>
-                      Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                      Harum, fugiat! Lorem ipsum dolor sit amet consectetur
-                      adipisicing elit. Natus, nemo autem vitae eos earum
-                      dolorum.
+                      Building of scalable enterprice software application  with the use of both frontend and backend technologies which could fastening the growth of startup businesses.
                     </p>
-                  </div>
-                  <div class="footer">
-                    <a href="">ORDER NOW ></a>
                   </div>
                 </div>
                 <div class="box">
                   <div class="head">
-                    <div class="icon"></div>
+                    <div class="icon"><ion-icon name="logo-android"></ion-icon></div>
                     <p>Andriod Development</p>
                   </div>
                   <div class="body">
                     <p>
-                      Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                      Harum, fugiat! Lorem ipsum dolor sit amet consectetur
-                      adipisicing elit. Natus, nemo autem vitae eos earum
-                      dolorum.
+                      Combining research, design and engineering to prototype experiences for your next version of Android.
                     </p>
-                  </div>
-                  <div class="footer">
-                    <a href="">ORDER NOW ></a>
                   </div>
                 </div>
                 <div class="box">
                   <div class="head">
-                    <div class="icon"></div>
+                    <div class="icon"><ion-icon name="logo-buffer"></ion-icon></div>
                     <p>UI/UX Design</p>
                   </div>
                   <div class="body">
                     <p>
-                      Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                      Harum, fugiat! Lorem ipsum dolor sit amet consectetur
-                      adipisicing elit. Natus, nemo autem vitae eos earum
-                      dolorum.
+                      Creating of user-friendly interfaces that enable users to understand how to use complex technical products.
                     </p>
-                  </div>
-                  <div class="footer">
-                    <a href="">ORDER NOW ></a>
                   </div>
                 </div>
                 <div class="box">
                   <div class="head">
-                    <div class="icon"></div>
+                    <div class="icon"><ion-icon name="logo-youtube"></ion-icon></div>
                     <p>Content Creation</p>
                   </div>
                   <div class="body">
                     <p>
-                      Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                      Harum, fugiat! Lorem ipsum dolor sit amet consectetur
-                      adipisicing elit. Natus, nemo autem vitae eos earum
-                      dolorum.
+                      As a developer coding isnt not just my thing, helping others find their passion as a developer is what makes me feel happy, By creating both visual and written based contents.
                     </p>
-                  </div>
-                  <div class="footer">
-                    <a href="">ORDER NOW ></a>
                   </div>
                 </div>
               </div>
