--- a/admin-dash/admin.html
+++ b/admin-dash/admin.html
@@ -167,23 +167,28 @@
 
       <!-- user info modal -->
       <!-- line modal -->
-      <div class="modal-cont" id="squarespaceModal">
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <button type="button" class="close" ><span aria-hidden="true">×</span>
-                <span class="closebtn"></span></button>
-              <h3>My Modal</h3>
-            </div>
-            <div class="modal-body">
-              <!-- content goes here -->
-              <form action="" class="form-group">
-                <label>Username</label>
-                <label>Password</label>
-                <label>Profile</label>
-              </form>
-            </div>
+      <div class="modal-cont">
+        <div class="modal-card">
+          <div class="head">
+            <p>Edit Userinfo</p>
+            <span class="btn btn-danger closebtn">&times;</span>
           </div>
+          <br>
+          <form action="" class="form-group">
+            <div class="body">
+              <label>Image</label>
+              <input type="file" name="img">
+              <br>
+              <label>Username</label>
+              <input type="text" class="form-control mt-1">
+              <label>Password</label>
+              <input type="password" class="form-control mt-1">
+            </div>
+            <div class="footer mt-2">
+              <input type="submit" class="btn btn-primary">
+              <input type="reset" class="btn btn-danger">
+            </div>
+          </form>
         </div>
       </div>
     </div>
@@ -193,8 +198,17 @@
   <script>
     function handleModal(){
       let btnmodal = document.querySelector(".modal-btn");
+      let closeModal = document.querySelector(".closebtn");
+      let modalcont = document.querySelector(".modal-cont");
 
+      btnmodal.onclick = ()=>{
+        modalcont.style.display = "flex";
+      }
+      closeModal.onclick = ()=>{
+        modalcont.style.display = "none";
+      }
     }
+    handleModal()
   </script>
 </body>
 
