--- a/testimonial/form.html
+++ b/testimonial/form.html
@@ -59,7 +59,7 @@
                <textarea name="comment" id="" cols="30" rows="5" class="form-control mt-1"></textarea>
                <div class="footer mt-2">
                     <input type="submit" value="Send Feedback" class="btn btn-primary">
-                    <input type="button" value="Cancel" class="btn btn-danger">
+                    <a href="../" class="btn btn-danger">Cancel</a>
                </div>
            </form> 
         </div>
