--- a/admin-dash/login.html
+++ b/admin-dash/login.html
@@ -51,7 +51,7 @@
                <br>
                <div class="footer">
                     <input type="submit" value="Login" class="btn btn-primary">
-                    <input type="button" value="Cancel" class="btn btn-danger">
+                    <a href="../" class="btn btn-danger">Cancel</a>
                </div>
            </form> 
         </div>
